Updates to provide semantic headers in page responses

--- a/v1/index.html
+++ b/v1/index.html
@@ -720,9 +720,9 @@
           <p>You can also get me through the below avenues</p>
           <div class="col-sm-9 d-flex m-auto justify-content-around">
             <a href="https://fiverr.com/xlvisben" target="_blank">Fiverr</a>
-            <a href="https://github.com/Xlvis" target="_blank">Github</a>
+            <a href="https://github.com/xlvisben" target="_blank">Github</a>
             <a href="https://elvisben.me.ke" target="_blank">Personal Website</a>
-            <a href="https://telegram.me/Xlvis" target="_blank">Telegram</a>
+            <a href="https://t.me/xlvisben" target="_blank">Telegram</a>
           </div>
         </div>
 
