Fixing desktop display

--- a/v1/index.html
+++ b/v1/index.html
@@ -117,7 +117,7 @@
                   Wards
                 </span>
               </a>
-              
+
             </div>
           </li>
 
@@ -129,7 +129,7 @@
       </nav>
     </div>
 
-    <div class="navigation-desktop">
+    <div class="navigation-desktop col-sm-3 col-4 bg-dark">
       <nav class="col-sm-3 col-4 bg-dark" id="navigationBar">
         <ul class="nav nav-pills flex-column">
           <div class="text-center">
