Adding credits to footer and fixing contact form

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         height: 100%;
         max-height:800px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
       }
@@ -46,6 +47,13 @@
         width: 100%;
         display: block;
       }
+      footer{
+        display: flex;
+        flex-direction: column;
+      }
+      footer, footer a{
+        color: white;
+      }
   </style>
   <body>
 
@@ -65,8 +73,24 @@
 
       </div>
 
-    </main>
+      <footer>
+        <span>
+          Credits to <a href="https://github.com/MusikuAustin" target="_blank">Austin</a> for the front-end design
+        </span>
+        <span>
+          Get me through the below avenues
+          <div class="">
+            <a href="https://fiverr.com/xlvisben" target="_blank">Fiverr</a>
+            <a href="https://github.com/xlvisben" target="_blank">Github</a>
+            <a href="https://elvisben.me.ke" target="_blank">Personal Website</a>
+            <a href="https://t.me/xlvisben" target="_blank">Telegram</a>
+          </div>
+        </span>
 
+        &copy; 2021
+      </footer>
+
+    </main>
 
   </body>
 </html>
