Update of docs and external linking

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kenya Demographics API</title>
+    <link rel="icon" type="image/png" href="v1/assets/images/logo.png">
   </head>
   <style media="screen">
       body, html{
@@ -74,6 +75,9 @@
       </div>
 
       <footer>
+        <div>
+          You can get to the repo also <a href="https://github.com/xlvisben/kenyaDemographicsAPI" target="_blank">hosted here</a>
+        </div>
         <span>
           Credits to <a href="https://github.com/MusikuAustin" target="_blank">Austin</a> for the front-end design
         </span>
